Removed display: flex on image-content class that was stopping text align centering from working

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,46 +1,62 @@
-body  {
-  margin: 0px;
-  border: 0;
+/*Delete after layout is done */
+
+div {
+	border: 1px solid black;
+}
+
+
+/*Header*/
+
+body {
+  margin: 0;
 }
 
 header {
 	display: flex;
+	align-items: center;
+	position: fixed;
+	z-index: 1;
+	width: 100%;
+	height: 80px;
 	font-family: Verdana, Geneva, sans-serif;
 	font-size: 14px;
 	font-weight: bold;
- 	z-index: 1;
-	position: fixed;
-	align-items: center;
-	width: 100%;
-	height: 100px;
+ 	background-color: white;
 	border-bottom: 1px solid black;
-	background-color: white;
 }
 
 .logo {
 	display: flex;
 	align-items: center;
 	flex-grow: 1;
-	padding-left: 25px;
+	padding-left: 30px;
+}
+
+.logo img {
+  width: 70px;
+  height: 60px;
+  margin-right: 12px;
 }
 
 .logo p {
 	color: MediumAquamarine;
-	padding-left: 10px;
 }
 
 nav {
-	display: flex;
-	z-index: 10;
-	text-align: right;
 	padding-right: 40px;
 }
 
-
-nav li {
-	display: inline-block;
-	padding: 0px 10px;
+nav a {
+	color: black;
 }
+
+nav span {
+	display: inline-block;
+	padding: 20px 10px;
+}
+
+
+/* Content */
 
 .content {
 	display: flex;
@@ -48,6 +64,8 @@ nav li {
 	margin: 0 auto 78px auto;
 	padding-top: 116px;
 }
+
+/* Content Layout */
 
 .column {
 	display: flex;
@@ -66,7 +84,63 @@ nav li {
 }
 
 
-.feature-story p {
+/* Image Layout */
+
+.img-content {
+	font-family: Georgia;
+  	font-weight: bold;
+  	font-size: 30px;
+  	color: white;
+  	height: 300px;
+  	margin-top: 15px;
+  	text-align: center;
+}
+
+
+.lead-story .img-content {
+	font-size: 40px;
+	background-image: url('../images/img-story-main.png');
+	width: 630px;
+	text-align: left;
+	margin-top: 0
+}
+
+
+
+.orca-story .img-content {
+	background-image: url('../images/img-story-2.png');
+
+}
+
+
+
+.burger-story .img-content {
+	background-image: url('../images/img-story-3.png');
+
+}
+
+.cat-story .img-content {
+	background-image: url('../images/img-story-1.png');
+}
+
+
+.caps {
+	text-transform: uppercase;
+}
+
+
+/* Old */
+
+
+
+
+/* 
+
+body  {
+  margin: 0px;
+  border: 0;
+}
+.lead-story p {
 	font-family: Georgia, sans-serif;
   	font-size: 17px;
   	color: black;
@@ -80,55 +154,9 @@ nav li {
 }
 
 
-.story-img {
-	font-family: Georgia;
-  	font-weight: bold;
-  	font-size: 30px;
-  	color: white;
-  	display: flex;
-  	height: 300px;
-  	margin-top: 15px;
-  	text-align: center;
-}
-
-.feature-story .story-img {
-	font-size: 40px;
-	background-image: url('../images/img-story-main.png');
-	width: 630px;
-	text-align: left;
-}
-
 .story h1 {
 	display: flex;
 }
 
-.orca-story .story-img {
-	background-image: url('../images/img-story-2.png');
 
-}
-
-.burger-story .story-img {
-	background-image: url('../images/img-story-3.png');
-
-}
-
-.cat-story .story-img {
-	background-image: url('../images/img-story-1.png');
-}
-
-
-.caps {
-	text-transform: uppercase;
-}
-
-a {
-	color: black;
-}
-
-div {
-	border: 1px solid black;
-}
-
-ul {
-	list-style-type: none;
-}
+*/ 
